--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
 #Changelog
+## [UR] - 2018-10-22
+### Added
+- PLUGIN :: dt-pdfmaker
+- PLUGIN :: dt-transform ba64script
 
 ## [1.2.1] - 2018-10-11
 ### Added
