--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,14 @@
 #Changelog
+## [UR] - 2019-11-18
+### Added
+- BS :: Configuration Context with ENV
+- PLUGIN :: do-http
+- PLUGIN :: do-bsspeak
+- PLUGIN :: do-mqtt
+- PLUGIN :: do-ext-storage
+### Removed
+- STORAGE :: remove ipc channel
+
 ## [1.2.2] - 2019-03-01
 ### Added
 - PLUGIN :: dt-pdfmaker
