--- a/Changelog
+++ b/Changelog
@@ -4,7 +4,7 @@
 - BS :: AMQP RPC Singleton Connection ,auto ack
 - STORAGE :: 50x speedup
 ### Added
-- BS :: env configuration context
+- PLUGIN :: dt-transform fn extension
 - PLUGIN :: dt-transform register
 - BS :: Configuration Context with ENV
 - PLUGIN :: do-http
