--- a/Changelog
+++ b/Changelog
@@ -14,6 +14,7 @@
 - PLUGIN :: do-bsspeak
 - PLUGIN :: do-mqtt
 - PLUGIN :: do-ext-storage
+- API :: BS Info
 ### Removed
 - STORAGE :: remove ipc channel
 
