--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 #Changelog
+## [1.2.4 Dev] - 2021-05-07
+### Added
+- STORAGE :: Object Cache
 ## [1.2.3] - 2021-05-05
 ### Update
 - AMQPLib Support Heartbeat Monitoring
