--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
 #Changelog
-## [1.2.4 Dev] - 2021-05-07
+## [1.2.4 Dev] - 2021-05-31
 ### Added
 - STORAGE :: Object Cache
+### Update
+- SS :: Direct Idxstore
 ## [1.2.3] - 2021-05-05
 ### Update
 - AMQPLib Support Heartbeat Monitoring
