--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 #Changelog
+## [1.2.5dev] - 2021-07-08
+### Added
+- DOCKER :: TZ Data
 ## [1.2.4] - 2021-06-21
 ### Added
 - STORAGE :: Object Cache
