--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
 #Changelog
-## [1.2.5dev] - 2021-07-08
+## [1.2.5dev] - 2021-08-04
 ### Added
 - DOCKER :: TZ Data
+### Fixed
+- PLUGIN :: dt-mysql port param
 ## [1.2.4] - 2021-06-21
 ### Added
 - STORAGE :: Object Cache
