--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,10 @@
 #Changelog
-## [1.2.5dev] - 2021-08-11
+## [1.2.5dev] - 2021-10-07
 ### Added
 - DOCKER :: TZ Data
 - STORAGE :: Wirdcard Subscribe
+- PLUGIN :: dt-jwt-verify
+- TRIGGER :: http-listener add query meta
 ### Fixed
 - PLUGIN :: dt-mysql port param
 ## [1.2.4] - 2021-06-21
