--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,15 @@
-#Changelog
+# Changelog
+## [1.2.6dev] - 2023-05-21
+### Removed
+- PLUGIN :: di-gistda-air
+- PLUGIN :: di-tanpibut
+- PLUGIN :: di-agritronics
+- PLUGIN :: dt-agritronics
+- PLUGIN :: dt-agritronics-tpb
+- PLUGIN :: dt-gistda-air
+- PLUGIN :: dt-gistda-water
+- PLUGIN :: dt-tanpibut
+
 ## [1.2.5] - 2021-10-07 -> 2023-05-21R
 ### Added
 - DOCKER :: TZ Data
