--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 # Changelog
 ## [1.2.6dev] - 2023-05-21
+### Added
+- TRIGGER :: http trigger callback
+- PLUGIN :: do-http-callback
 ### Removed
 - PLUGIN :: di-gistda-air
 - PLUGIN :: di-tanpibut
